--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "gatsby": "^5.9.1",
     "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-image": "^3.9.0",
@@ -24,6 +29,8 @@
     "gatsby-plugin-sitemap": "^6.9.0",
     "gatsby-source-filesystem": "^5.9.0",
     "gatsby-transformer-sharp": "^5.9.0",
+    "i": "^0.3.7",
+    "npm": "^9.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.62.1"
