--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-source-filesystem": "^5.10.0",
     "gatsby-transformer-sharp": "^5.10.0",
     "i": "^0.3.7",
+    "kwesforms": "^2.1.27",
     "npm": "^9.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
