--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
     "gatsby": "^5.14.1",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
@@ -27,6 +28,8 @@
     "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-source-graphql": "^5.14.0",
+    "gatsby-source-strapi": "^5.0.4",
     "gatsby-transformer-sharp": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
